--- a/index.html
+++ b/index.html
@@ -412,11 +412,15 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img
-          src="img/logo-green-2x.png"
+
+        <picture class="footer__logo">
+          <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small.png 2x 2x"media="(max-width: 37.5em)">
+          <img
+          srcset=" img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
           alt="Natours logo"
-          class="footer__logo"
         />
+        </picture>
+        
       </div>
       <div class="row">
         <div class="col-1-of-2">
