--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+
+              <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" 
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" 
+              alt="Photo 1" 
+              class="composition__photo composition__photo--p1" 
+              src="img/nat-1-large.jpg"/>
+
+              <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" 
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" 
+              alt="Photo 2" 
+              class="composition__photo composition__photo--p2" 
+              src="img/nat-2-large.jpg"/>
+
+              <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" 
+              sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" 
+              alt="Photo 3" 
+              class="composition__photo composition__photo--p3" 
+              src="img/nat-3-large.jpg"/>
+
+              <!--
               <img
                 src="img/nat-1-large.jpg"
                 alt="Photo 1"
@@ -106,6 +126,7 @@
                 alt="Photo 3"
                 class="composition__photo composition__photo--p3"
               />
+              -->
             </div>
           </div>
         </div>
@@ -416,7 +437,7 @@
         <picture class="footer__logo">
           <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small.png 2x 2x"media="(max-width: 37.5em)">
           <img
-          srcset=" img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+          srcset=" img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" src="img/logo-green-2x.png"
           alt="Natours logo"
         />
         </picture>
