finished making images responsive, added Javascript to make navigation functional

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <nav class="navigation__nav">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a href="#" class="navigation__link"><span>01</span>About Natours</a>
+          <a href="#section-about" class="navigation__link"><span>01</span>About Natours</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link"><span>02</span>Your benefits</a>
+          <a href="#section-features" class="navigation__link"><span>02</span>Your benefits</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link"><span>03</span>Popular tours</a>
+          <a href="#section-tours" class="navigation__link"><span>03</span>Popular tours</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link"><span>04</span>Stories</a>
+          <a href="#section-stories" class="navigation__link"><span>04</span>Stories</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link"><span>05</span>Book now</a>
+          <a href="#section-book" class="navigation__link"><span>05</span>Book now</a>
         </li>
       </ul>
     </nav>
@@ -59,7 +59,7 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section class="section-about" id="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
@@ -132,7 +132,7 @@
         </div>
       </section>
 
-      <section class="section-features">
+      <section class="section-features" id="section-features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -307,10 +307,10 @@
         </div>
 
         <div class="row">
-          <div class="story">
+          <div class="story" id="section-stories">
             <figure class="story__shape">
               <img
-                src="img/nat-8.jpg"
+                src="img/nat-8-small.jpg"
                 alt="person on a tour"
                 class="story__img"
               />
@@ -336,7 +336,7 @@
           <div class="story">
             <figure class="story__shape">
               <img
-                src="img/nat-9.jpg"
+                src="img/nat-9-small.jpg"
                 alt="person on a tour"
                 class="story__img"
               />
@@ -363,7 +363,7 @@
         </div>
       </section>
 
-      <section class="section-book">
+      <section class="section-book" id="section-book">
         <div class="row">
           <div class="book">
             <div class="book__form">
@@ -477,8 +477,8 @@
     <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
-          <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
-          <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+          <img src="img/nat-8-small.jpg" alt="tour photo" class="popup__img">
+          <img src="img/nat-9-small.jpg" alt="tour photo" class="popup__img">
 
         </div>
         <div class="popup__right">
@@ -535,5 +535,6 @@
       </div>
     </section>
     -->
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
